--- a/topicsApp/package.json
+++ b/topicsApp/package.json
@@ -10,13 +10,15 @@
   "author": "Felipe Apostol <flipjs.io@gmail.com> (http://flipjs.io/)",
   "license": "MIT",
   "devDependencies": {
-    "react": "^0.11.1",
-	"gulp": "^3.8.8",
+    "firebase": "^2.2.3",
+    "gulp": "^3.8.8",
+    "gulp-browserify": "^0.5.0",
+    "gulp-concat": "^2.4.0",
+    "gulp-connect": "^2.0.6",
+    "gulp-open": "^0.2.8",
     "gulp-react": "^1.0.1",
-	"gulp-connect": "^2.0.6",
-	"gulp-concat": "^2.4.0",
-	"gulp-open": "^0.2.8",
-	"gulp-browserify": "^0.5.0",
-	"reactify": "^0.14.0"
+    "lodash": "^3.6.0",
+    "react": "^0.11.1",
+    "reactify": "^0.14.0"
   }
 }
